# dagrs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  err
.github/workflows/: base.yml  main.yml
benches/: compute_dag_bench.rs
dagrs-derive/: Cargo.toml
dagrs-derive/src/: auto_node.rs
dagrs_core/: Cargo.toml
dagrs_core/src/: lib.rs
dagrs_core/src/engine/: dag.rs  graph.rs  mod.rs
dagrs_core/src/parser/: error.rs  mod.rs  yaml_parser.rs
dagrs_core/src/task/: cmd.rs  default_task.rs  error.rs  mod.rs  yaml_task.rs
dagrs_core/src/utils/: default_logger.rs  env.rs  gen_macro.rs  log.rs  mod.rs
dagrs_derive/: Cargo.toml
dagrs_derive/src/: dependencies.rs  lib.rs  task.rs
derive/: Cargo.toml
derive/src/: auto_node.rs  lib.rs  relay.rs
examples/: auto_node.rs  auto_relay.rs  compute.rs  compute_dag.rs  conditional_node.rs  custom_log.rs  custom_node.rs  custom_parser.rs  custom_parser_and_task.rs  custom_task.rs  dependencies.rs  derive_task.rs  engine.rs  hello.rs  hello_dagrs.rs  hello_env.rs  hello_script.rs  impl_action.rs  recv_any_example.rs  typed_action.rs  use_macro.rs  yaml_dag.rs
examples/dagrs-sklearn/: Cargo.toml
examples/dagrs-sklearn/examples/: sklearn.rs
examples/dagrs-sklearn/src/: command_action.rs
examples/dagrs-x-notebook/: Cargo.toml  predict_acc.txt  theta.txt  theta_0.txt  theta_1.txt  theta_2.txt  theta_3.txt  theta_4.txt  theta_5.txt  theta_6.txt  theta_7.txt  theta_8.txt  theta_9.txt
examples/dagrs-x-notebook/examples/: lr_i.py  lr_root.py  raw.py  sklearn.rs
examples/dagrs-x-notebook/src/: command_action.rs  lib.rs
examples/dagrs-x-notebook/src/parser/: mod.rs  yaml_parser.rs
examples/dagrs-x-notebook/tests/: dag_job_test.rs  yaml_parser_test.rs
src/: lib.rs  main.rs
src/connection/: in_channel.rs  information_packet.rs  mod.rs  out_channel.rs
src/engine/: dag.rs  dag_engine.rs  env_variables.rs  error.rs  error_handler.rs  graph.rs  mod.rs
src/graph/: error.rs  graph.rs  mod.rs  node.rs
src/node/: action.rs  cyclic_node.rs  default_node.rs  mod.rs  node.rs  typed_action.rs
src/parser/: error.rs  json_parser.rs  mod.rs  yaml_parser.rs
src/task/: action.rs  cmd.rs  default_task.rs  error.rs  mod.rs  script.rs  specific_task.rs  state.rs  task.rs  yaml_task.rs
src/utils/: default_logger.rs  env.rs  execstate.rs  file.rs  gen_macro.rs  log.rs  mod.rs  output.rs  parser.rs
src/yaml/: mod.rs  yaml_parser.rs
test/: test_dag1.yaml  test_dag2.yaml  test_error1.yaml  test_error2.yaml  test_error3.yaml  test_error4.yaml  test_loop1.yaml  test_loop2.yaml  test_value_pass1.yaml  test_value_pass2.yaml
tests/: dag_job_test.rs  env_test.rs  execution_test.rs  yaml_parser_test.rs
tests/config/: correct.yaml  custom_file_task.txt  illegal_content.yaml  loop_error.yaml  no_script.yaml  no_start_with_dagrs.yaml  no_task_name.yaml  precursor_not_found.yaml  script_run_failed.yaml  self_loop_error.yaml  sh_script.sh  test.js  unsupported_type.yaml
tests/custom_task/: multi_tasks.yaml  no_predecessors_error.yaml  only_one_task.yaml  self_closed_loop.yaml  simple_tasks_graph.yaml  task_no_name_error.yaml
