[package]
name = "dagrs"
authors = ["Quanyi Ma <eli@patch.sh>", "Zhilei Qiu <qzl2503687@gmail.com>"]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The DAG engine, named dagrs, is designed to execute multiple tasks with graph-like dependencies. It offers high performance and asynchronous execution, providing a convenient programming interface for Rust developers."
readme = "README.md"
repository = "https://github.com/open-rust-initiative/dagrs"
keywords = ["DAG", "task", "async", "parallel", "concurrent"]

[workspace]
members = ["derive", "."]

[dependencies]
yaml-rust = "0.4.5"
bimap = "0.6.1"
clap = { version = "4.2.2", features = ["derive"] }
anymap2 = "0.13.0"
tokio = { version = "1.28", features = ["rt", "sync","rt-multi-thread"] }
derive ={ path = "derive", version = "0.3.0" }
thiserror = "1.0.50"

[dev-dependencies]
log = "0.4"
simplelog = "0.12"

[features]
default = ["logger"]
logger = []
yaml = []
derive = ["derive/derive"]

[[bin]]
name = "dagrs"
required-features = ["yaml"]

[[example]]
name = "custom_log"
required-features = ["yaml"]

[[example]]
name = "engine"
required-features = ["yaml"]

[[example]]
name = "derive_task"
required-features = ["derive"]

[[example]]
name = "dependencies"
required-features = ["derive"]

[[example]]
name = "yaml_dag"
required-features = ["yaml"]

[[test]]
name = "dag_job_test"
required-features = ["yaml"]

[[test]]
name = "yaml_parser_test"
required-features = ["yaml"]
