[package]
name = "dagrs"
authors = ["Quanyi Ma <eli@patch.sh>", "Zhilei Qiu <qzl2503687@gmail.com>"]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The DAG engine, named dagrs, is designed to execute multiple tasks with graph-like dependencies. It offers high performance and asynchronous execution, providing a convenient programming interface for Rust developers."
readme = "README.md"
repository = "https://github.com/open-rust-initiative/dagrs"
keywords = ["DAG", "task", "async", "parallel", "concurrent"]

[workspace]
members = ["."]

[dependencies]
tokio = { version = "1.28", features = ["rt", "sync", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.10.1"

[dev-dependencies]
simplelog = "0.12"
criterion = { version = "0.5.1", features = ["html_reports"] }

[target.'cfg(unix)'.dev-dependencies]


[features]
