[package]
name = "dagrs-derive"
authors = [
    "Quanyi Ma <eli@patch.sh>",
    "Xiaolong Fu <njufxl@gmail.com>",
    "Zhilei Qiu <qzl2503687@gmail.com>",
]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true

[features]
default = ["derive"]
derive = []
