[package]
name = "dagrs_core"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
bimap = "0.6.1"
clap = { version = "4.2.2", features = ["derive"] }
anymap2 = "0.13.0"
thiserror = "1.0.30"
tokio = { version = "1.28", features = ["rt", "sync","rt-multi-thread"] }

[features]
default = ["logger"]
logger = []
yaml = []


[[bin]]
name = "dagrs"
required-features = ["yaml"]
